--- a/style.css
+++ b/style.css
@@ -1,13 +1,28 @@
 body{
-    background: rgb(213, 235, 15);
+    background: rgb(195, 235, 15);
 }
 h1{
     font-size: 80px;
-    color: rgb(255, 81, 0);
+    color: rgb(255, 115, 0);
     text-align: center;
 }
 img{
     width: 350px;
     height: 300px;
     margin-left: 00px;
+}
+.cabecalho{
+    background-color: rgb(255, 123, 0);
+    display: flex;
+}
+.logoimg{
+    width: 1500px;
+    height: 400px;
+}
+.itemcabecalho{
+    list-style: none;
+    text-transform: uppercase;
+    font-size: 30px;
+    color: black;
+    padding-left: 30px;
 }
